Created townhall CSS and started new index page

--- a/townhall/app/styles/global.css
+++ b/townhall/app/styles/global.css
@@ -7,8 +7,8 @@
   
   :root {
     --hs-links: 48 100%;
-    --color-foreground: hsl(0, 0%, 100%);
-    --color-background: hsl(278, 73%, 19%);
+    --color-foreground: #00689D;
+    --color-background: white;
     --color-links: hsl(var(--hs-links) 50%);
     --color-links-hover: hsl(var(--hs-links) 45%);
     --color-border: hsl(277, 85%, 38%);
