--- a/townhall/app/styles/townhall.css
+++ b/townhall/app/styles/townhall.css
@@ -25,6 +25,14 @@
     font-weight: 200;
 }
 
+.authform {
+    background-color: #00689D;
+    width: fit-content;
+    color: white;
+    padding: 20px;
+    margin-top: 100px;
+}
+
 .content {
     font-size: 60px;
     display: flex;
