--- a/townhall/app/styles/townhall.css
+++ b/townhall/app/styles/townhall.css
@@ -31,6 +31,7 @@
     color: white;
     padding: 20px;
     margin-top: 100px;
+    font-size: 36px;
 }
 
 .content {
@@ -39,6 +40,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+form {
+    padding: 20px;
+    margin-top: 10px;
+    background-color: black;
 }
 
 * {
