--- a/townhall/app/styles/townhall.css
+++ b/townhall/app/styles/townhall.css
@@ -14,6 +14,7 @@
     background-color: #00689D;
     color: white;
     margin-right: 100px;
+    text-decoration-line: none;
 }
 
 .auth {
@@ -23,6 +24,7 @@
     border-color: white;
     border-width: 1px;
     font-weight: 200;
+    text-decoration-line: none;
 }
 
 .authform {
