--- a/townhall/app/styles/townhall.css
+++ b/townhall/app/styles/townhall.css
@@ -9,12 +9,46 @@
     font-size: 20px;
 }
 
+.overview {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.small {
+    font-size: 20px;
+}
+
+.problemCard {
+    background-color: #00689D;
+    color: white;
+    width: 40%;
+    font-size: 20px;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+.select { 
+    margin-left: 5px;
+}
+
 .name {
     float: left;
     background-color: #00689D;
     color: white;
     margin-right: 100px;
     text-decoration-line: none;
+}
+
+.dropdownLabel {
+    background-color: white;
+    color: black;
+    margin-right: 5px;
+}
+
+.dropdownMenu {
+    margin-right: 10px;
 }
 
 .auth {
@@ -42,6 +76,27 @@
 
 form {
     flex-direction: column;
+}
+
+.toggleBar {
+    background-color: white;
+    color: black;
+    display: flex;
+    flex-direction: row;
+}
+
+.filter {
+    margin-bottom: 15px;
+}
+
+.h1 {
+    margin-top: 25px;
+    font-size: 40px;
+}
+
+.h2 {
+    margin-top: 25px;
+    font-size: 30px;
 }
 
 .content {
@@ -111,13 +166,18 @@ button {
 
 .center-links {
     display: flex;
-    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+    background-color: #00689D;
 }
 
 .nav-link {
     color: white;
     background-color: #00689D;
     margin: 0 10px;
+    font-weight: 200;
+    margin-left: 40px;
+    margin-right: 40px;
     text-decoration-line: none;
 }
 
